# Specula

./: .clang-format  .cmake-format  .gitignore  .gitlab-ci.yml  .versionrc.js  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  classspecula_1_1iio_1_1ImageWriter-members.html  classspecula_1_1iio_1_1ImageWriter.html  classspecula_1_1iio_1_1ImageWriter.js  classspecula_1_1iio_1_1ImageWriter__coll__graph.dot  classspecula_1_1iio_1_1ImageWriter__inherit__graph.dot  classspecula_1_1iio_1_1Output-members.html  classspecula_1_1iio_1_1Output.html  classspecula_1_1iio_1_1PngWriter-members.html  classspecula_1_1iio_1_1PngWriter.html  classspecula_1_1iio_1_1PngWriter.js  classspecula_1_1iio_1_1PngWriter__coll__graph.dot  classspecula_1_1iio_1_1PngWriter__inherit__graph.dot  dir_000001_000005.html  dir_000003_000001.html  dir_000004_000005.html  dir_000006_000003.html  dir_000006_000004.html  dir_26db96966dabc582ccddf970f4208118.html  dir_26db96966dabc582ccddf970f4208118.js  dir_26db96966dabc582ccddf970f4208118_dep.dot  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_75259a9b390e5394a742a74b57fe550b.html  dir_75259a9b390e5394a742a74b57fe550b.js  (+76 more)
.github/workflows/: ci.yml  release.yml
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature Proposal.md
app/: CMakeLists.txt  main.cpp  sysinfo.cpp  sysinfo.hpp
cmake/: EnableCoverage.cmake  EnableExtraCompilerWarnings.cmake
docs/: CMakeLists.txt  resources.md
docs/assets/: DoxygenLayout.xml  doxygen-awesome.css  footer-dep.html  footer.html  header-old.html  header.html
docs/assets/css/: override-search.css  override-svg.css  override.css
docs/assets/html/: header.html
docs/assets/js/: doxygen-awesome-darkmode-toggle.js
docs/assets/scss/: doxygen-awesome-sidebar-only-darkmode-toggle.scss  doxygen-awesome-sidebar-only.scss  doxygen-awesome.scss  override.scss  search.scss  settings.scss  svg.scss
include/specula/: logging.hpp  md5.hpp  specula.hpp  sysinfo.hpp  version.hpp.in
include/specula/common/: logging.hpp
include/specula/concepts/: container.hpp
include/specula/iio/: output.hpp  png.hpp  pnm.hpp  qoi.hpp  spec.hpp  writer.hpp
scripts/: doc-coverage.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: CMakeLists.txt  logging.cpp  md5.cpp  specula.cpp  sysinfo.cpp
src/common/: CMakeLists.txt  logging.cpp
src/iio/: CMakeLists.txt  png.cpp  pnm.cpp  qoi.cpp  writer.cpp
src/specula/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  md5.cpp  skeleton.cpp  specula.cpp
tests/iio/: png.cpp  pnm.cpp  qoi.cpp  temp_file.hpp  test_image.hpp
